--- a/WinPointManagementSystem/.classpath
+++ b/WinPointManagementSystem/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_251">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
@@ -13,9 +13,5 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/mssql-jdbc-7.2.2.jre8.jar"/>
-	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/servlet-api.jar"/>
-	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/gson-2.2.2.jar"/>
-	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
