Changes from Anjali

--- a/WinPointManagementSystem/.classpath
+++ b/WinPointManagementSystem/.classpath
@@ -15,5 +15,8 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/mssql-jdbc-7.2.2.jre8.jar"/>
 	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/controlsfx-8.40.11.jar"/>
+	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/javax.mail-1.6.2.jar"/>
+	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/activation.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
