--- a/WinPointManagementSystem/.classpath
+++ b/WinPointManagementSystem/.classpath
@@ -1,27 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5">
-		<attributes>
-			<attribute name="owner.project.facets" value="jst.web"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/mssql-jdbc-7.2.2.jre8.jar"/>
-	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/gson-2.2.2.jar"/>
-	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/controlsfx-8.40.11.jar"/>
-	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/javax.mail-1.6.2.jar"/>
-	<classpathentry kind="lib" path="D:/Winpoint/WinPointSolutions/2020/CommonJarFiles/activation.jar"/>
-=======
-	<classpathentry kind="lib" path="C:/Program Files/mssql-jdbc-8.2.2.jre8 (1).jar"/>
-	<classpathentry kind="lib" path="C:/Users/SUHASI/Downloads/controlsfx-8.40.11.jar"/>
->>>>>>> db5c7d332b1b5a0b62d101bb0de1925c868c1a44
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/Users/abhishekdixit/Downloads/mssql-jdbc-8.2.2.jre8.jar"/>
+	<classpathentry kind="lib" path="/Users/abhishekdixit/Downloads/activation.jar"/>
+	<classpathentry kind="lib" path="/Users/abhishekdixit/Downloads/controlsfx-8.40.11.jar"/>
+	<classpathentry kind="lib" path="/Users/abhishekdixit/Downloads/javax-mail-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/abhishekdixit/Downloads/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="/Users/abhishekdixit/Downloads/javax.servlet-api-3.0.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
